adl-frontend/src/test/resources/unit/error/semantic/primitives/Primitive.adl
primitive primitives.Primitive {
	@SemanticError(GroupId="MADL",ErrorId="SOURCE_NOT_FOUND")
	source my.c;	
}